--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -2,10 +2,10 @@
 @inject IUser AppUser
 
 <ul class="navbar-nav">
-    @if (AppUser.EstaAutenticado())
+    @if (AppUser.IsAuthenticated())
     {
     <li class="nav-item">
-        <a class="nav-link text-dark" title="Manage">Olá @AppUser.ObterUserEmail()</a>
+        <a class="nav-link text-dark" title="Manage">Olá @AppUser.GetEmail()</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-controller="Identidade" asp-action="Logout">Sair</a>
