--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/Error.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/Error.cshtml
@@ -12,10 +12,10 @@
     }
     else
     {
-    ViewData["Title"] = Model.Titulo;
+    ViewData["Title"] = Model.Title;
 
     <div>
-        <h2>@Html.Raw(Model.Mensagem)</h2>
+        <h2>@Html.Raw(Model.Message)</h2>
     </div>
 
     }
