--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -8,16 +8,16 @@
         <a class="nav-link text-dark" title="Manage">Olá @AppUser.GetEmail()</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-controller="Identidade" asp-action="Logout">Sair</a>
+        <a class="nav-link text-dark" asp-controller="Identity" asp-action="Logout">Sair</a>
     </li>
     }
     else
     {
     <li class="nav-item" style="padding-right: 30px;">
-        <a class="btn btn-success" asp-controller="Identidade" asp-action="Registro">Crie sua conta</a>
+        <a class="btn btn-success" asp-controller="Identity" asp-action="Register">Crie sua conta</a>
     </li>
     <li class="nav-item">
-        <a class="btn btn-primary" asp-controller="Identidade" asp-action="Login">Login</a>
+        <a class="btn btn-primary" asp-controller="Identity" asp-action="Login">Login</a>
     </li>
     }
 </ul>
