--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Identity/Login.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Identity/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model NerdStoreEnterprise.WebApp.MVC.Models.UserLoginViewModel
+﻿@model NerdStoreEnterprise.WebApp.MVC.Models.Identity.UserLoginViewModel
 
 @{
     ViewData["Title"] = "Log in";
