--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Identity/Register.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Identity/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model NerdStoreEnterprise.WebApp.MVC.Models.RegisterUserViewModel
+﻿@model NerdStoreEnterprise.WebApp.MVC.Models.Identity.RegisterUserViewModel
 
 @{
     ViewData["Title"] = "Registro";
