--- a/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Catalog/ProductDetails.cshtml
+++ b/src/web/NerdStoreEnterprise.WebApp.MVC/Views/Catalog/ProductDetails.cshtml
@@ -36,11 +36,11 @@
                     </div>
 
                     <div class="mb-3">
-                        <var class="price h4">@this.FormatoMoeda(Model.Value)</var>
+                        <var class="price h4">@this.FormatCurrency(Model.Value)</var>
                     </div>
 
                     <h5>@Model.Description</h5><br />
-                    <p> @this.MensagemEstoque(Model.StockQuantity)</p>
+                    <p> @this.GetStockMessage(Model.StockQuantity)</p>
 
                     <hr>
 
